[gd_scene load_steps=2 format=3 uid="uid://loading_screen_001"]

[ext_resource type="Script" path="res://scripts/LoadingScreen.gd" id="1_script"]

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.08, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LoadingTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Loading Smart Home..."
horizontal_alignment = 1

[node name="ProgressBarContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer/ProgressBarContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="CenterContainer/VBoxContainer/ProgressBarContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "0%"
horizontal_alignment = 1

[node name="LoadingText" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Initializing..."
horizontal_alignment = 1

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
